robballen75-Salesforce/4-7-15/src/objects/Acct_Campaign_Custom_Rollup__c.object
<CustomObject>
    <description>Custom object used to store campaign and account related information for the generation of the DocXTools Healthcheck score. The data is used by rollup summary and formula fields on the Account object to calculate the number of open enrollment training hours for campaigns that meet a specific criteria. Only data for the most recent 12 months are used, so records are purged when they hit that timeframe.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master-Child record to associated Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account-Campaign Custom Rollups</relationshipLabel>
        <relationshipName>Account_Campaign_Custom_Rollups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign_Hours__c</fullName>
        <description>Number of campaign hours calculated by taking the number of days (end date - start date + 1) and multiplying by 8. The value is automatically populated via a trigger using data from the campaign record.</description>
        <label>Campaign Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_ID__c</fullName>
        <description>As of Winter &apos;10, a reference to a campaign member record is not allowed. So, instead, the id of the associated campaign member record is stored as a string value.</description>
        <label>Campaign Member ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <description>Start date of the campaign. The value is automatically populated via a trigger on the campaign member object using the corresponding field value on the campaign record.</description>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup reference field to the associated campaign record.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Account-Campaign Custom Rollups</relationshipLabel>
        <relationshipName>Account_Campaign_Custom_Rollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup reference field to the associated user record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account-Campaign Custom Rollups</relationshipLabel>
        <relationshipName>Account_Campaign_Custom_Rollups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purge_Date__c</fullName>
        <description>Formula field used by the KP Health check scoring system. The value represents the date on which the data in the record is no longer relevant and should be purged.</description>
        <formula>Campaign_Start_Date__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purge Date</label>
        <type>Date</type>
    </fields>
    <label>Account-Campaign Custom Rollup</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Account-Campaign CRU ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account-Campaign Custom Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>